--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,14 +1,14 @@
 <mat-card>
   <mat-spinner *ngIf="isLoading"></mat-spinner>
-  <form (submit)="onSignUp(signUpForm)" #signUpForm="ngForm" *ngIf="!isLoading">
+  <form (submit)="onSignup(signupForm)" #signupForm="ngForm" *ngIf="!isLoading">
     <mat-form-field>
       <input
         matInput
-        type="email"
         name="email"
-        placeholder="E-mail"
-        #emailInput="ngModel"
         ngModel
+        type="email"
+        placeholder="E-Mail"
+        #emailInput="ngModel"
         required
         email
       />
@@ -16,21 +16,20 @@
         >Please enter a valid email.</mat-error
       >
     </mat-form-field>
-
     <mat-form-field>
       <input
         type="password"
         name="password"
+        ngModel
         matInput
         placeholder="Password"
-        ngModel
-        required
         #passwordInput="ngModel"
+        required
       />
       <mat-error *ngIf="passwordInput.invalid"
         >Please enter a valid password.</mat-error
       >
     </mat-form-field>
-    <button mat-raised-button color="accent" type="submit">SignUp</button>
+    <button mat-raised-button color="accent" type="submit">Signup</button>
   </form>
 </mat-card>
