--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,9 +8,13 @@
     [opened]="(isHandset$ | async) === false"
   >
     <mat-toolbar>Menu</mat-toolbar>
-    <mat-nav-list>
+    <mat-nav-list *ngIf="isAuthenticated">
       <a mat-list-item routerLink="/">Home</a>
       <a mat-list-item routerLink="/newPlanet">New Planet</a>
+      <a mat-list-item (click)="onLogout()">Logout</a>
+    </mat-nav-list>
+    <mat-nav-list *ngIf="!isAuthenticated">
+      <a mat-list-item routerLink="/">Home</a>
       <a mat-list-item routerLink="/signup">Signup</a>
       <a mat-list-item routerLink="/login">Login</a>
     </mat-nav-list>
@@ -26,7 +30,7 @@
       >
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>Project-Space-Travel</span>
+      <span routerLink="/">Project-Space-Travel</span>
     </mat-toolbar>
     <ng-content></ng-content>
     <!-- Add Content Here -->
