--- a/src/app/planets/create-planet/create-planet.component.html
+++ b/src/app/planets/create-planet/create-planet.component.html
@@ -11,7 +11,7 @@
         >Pick a planet status</mat-error
       >
     </mat-form-field>
-    <div>
+    <!-- <div>
       <button mat-stroked-button type="button" (click)="filePicker.click()">
         Pick Image
       </button>
@@ -19,7 +19,7 @@
     </div>
     <div class="image-preview" *ngIf="imagePreview !== '' && imagePreview">
       <img [src]="imagePreview" [alt]="form.value.status" />
-    </div>
+    </div> -->
     <mat-form-field>
       <textarea
         matInput
