--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
-<app-header>
-  <main>
-    <router-outlet></router-outlet>
-  </main>
-</app-header>
+<app-header></app-header>
+<main>
+  <router-outlet></router-outlet>
+</main>
