--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -4,25 +4,25 @@
     <mat-form-field>
       <input
         matInput
-        name="email"
-        ngModel
         type="email"
         placeholder="E-Mail"
         #emailInput="ngModel"
+        name="email"
+        ngModel
         required
         email
       />
       <mat-error *ngIf="emailInput.invalid"
-        >Please enter a valid email.</mat-error
+        >Please enter valid email.</mat-error
       >
     </mat-form-field>
     <mat-form-field>
       <input
         type="password"
-        name="password"
-        ngModel
         matInput
         placeholder="Password"
+        name="password"
+        ngModel
         #passwordInput="ngModel"
         required
       />
@@ -30,6 +30,8 @@
         >Please enter a valid password.</mat-error
       >
     </mat-form-field>
-    <button mat-raised-button color="accent" type="submit">Signup</button>
+    <button mat-raised-button color="accent" type="submit" *ngIf="!isLoading">
+      Sign Up
+    </button>
   </form>
 </mat-card>
