--- a/src/app/planets/planet-list/planet-list.component.html
+++ b/src/app/planets/planet-list/planet-list.component.html
@@ -4,8 +4,9 @@
     <mat-expansion-panel-header>
       {{ planet.status }}
     </mat-expansion-panel-header>
+
     <p>{{ planet.description }}</p>
-    <mat-action-row *ngIf="isAuthenticated">
+    <mat-action-row *ngIf="userIsAuthenticated">
       <a mat-button color="primary" [routerLink]="['/edit', planet.id]">EDIT</a>
       <button mat-button color="warn" (click)="onDelete(planet.id)">
         DELETE
@@ -13,6 +14,16 @@
     </mat-action-row>
   </mat-expansion-panel>
 </mat-accordion>
-<p class="mat-body-1 info-text" *ngIf="planets.length <= 0 && !isLoading">
-  No planets added
+<mat-paginator
+  [length]="totalPosts"
+  [pageSize]="postsPerPage"
+  [pageSizeOptions]="pageSizeOptions"
+  (page)="onChangedPage($event)"
+  *ngIf="planets.length > 0"
+></mat-paginator>
+<p class="info-text mat-body-1" *ngIf="planets.length <= 0 && !isLoading">
+  No posts added yet!
 </p>
+<!-- <div class="post-image">
+    <img [src]="planet.imagePath" [alt]="planet.title" />
+  </div> -->
