--- a/src/app/planets/create-planet/create-planet.component.html
+++ b/src/app/planets/create-planet/create-planet.component.html
@@ -1,13 +1,11 @@
 <mat-card>
   <mat-spinner *ngIf="isLoading"></mat-spinner>
-  <form
-    [formGroup]="form"
-    (submit)="onSavePlanet()"
-    *ngIf="!isLoading"
-    class="body"
-  >
-    <img class="one-planet-img" href="./imgg/p1.svg" />
-    <label class="one-planet-name">TAU 23</label>
+  <form [formGroup]="form" (submit)="onSavePlanet()" *ngIf="!isLoading">
+    <div>
+      <img class="one-planet-img" src="../../assets/img/planet1.png" />
+      <label class="one-planet-name">TAU 23</label>
+    </div>
+
     <mat-form-field>
       <textarea
         class="textarea"
@@ -31,19 +29,10 @@
         >Pick a planet status</mat-error
       >
     </mat-form-field>
-    <label class="bycapitan">by captan <span>Johnathan Smartson</span></label>
+    <label class="bycaptain">by captain <span>Johnathan Smartson</span></label>
     <label class="robots">Robots: <span>T2011, T215, T72 ...</span></label>
     <button mat-raised-button color="accent" type="submit" class="submit">
       Save Post
     </button>
   </form>
 </mat-card>
-<!-- <div>
-          <button mat-stroked-button type="button" (click)="filePicker.click()">
-            Pick Image
-          </button>
-          <input type="file" #filePicker (change)="onImagePicked($event)" />
-        </div>
-        <div class="image-preview" *ngIf="imagePreview !== '' && imagePreview">
-          <img [src]="imagePreview" [alt]="form.value.status" />
-        </div> -->
