--- a/src/app/planets/planet-list/planet-list.component.html
+++ b/src/app/planets/planet-list/planet-list.component.html
@@ -10,9 +10,9 @@
         <label class="planet-name">TAU 23</label>
       </div>
       <div class="description">
-        <textarea disabled rows="3">{{ planet.description }}</textarea>
+        <textarea disabled rows="3">"{{ planet.description }}"</textarea>
         <label class="by-captain">by Captain:<span> John</span></label>
-        <label class="robots">Robots:<span> RT55, T55</span></label>
+        <label class="robots">Robots: <span> T55, T203, T41</span></label>
       </div>
       <div class="status">{{ planet.status }}</div>
     </mat-panel-description>
