--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -13,7 +13,7 @@
         email
       />
       <mat-error *ngIf="emailInput.invalid"
-        >Please enter valid email.</mat-error
+        >Please enter a valid email.</mat-error
       >
     </mat-form-field>
     <mat-form-field>
