--- a/src/app/planets/create-planet/create-planet.component.html
+++ b/src/app/planets/create-planet/create-planet.component.html
@@ -2,7 +2,7 @@
   <mat-spinner *ngIf="isLoading"></mat-spinner>
   <form [formGroup]="form" (submit)="onSavePlanet()" *ngIf="!isLoading">
     <div>
-      <img class="one-planet-img" src="../../assets/img/planet1.png" />
+      <img class="one-planet-img" [src]="randomImage" />
       <label class="one-planet-name">TAU 23</label>
     </div>
 
