--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,8 +1,8 @@
 ul {
   list-style: none;
-  padding-left: 120px;
   display: flex;
   margin: 0;
+  margin-inline-start: auto;
 }
 
 a {
@@ -11,7 +11,7 @@ a {
 }
 
 .signup {
-  margin-left: 40px;
+  margin-left: 25px;
 }
 
 .mat-toolbar.mat-primary {
